--- a/02. working/layout/boxlayout.css
+++ b/02. working/layout/boxlayout.css
@@ -5,6 +5,61 @@ body {
 	color: rgb(29, 29, 31);
     /* 자간 줄이기 */
 	letter-spacing: -0.05em;
-	background: white;
+	/* background-color: #f5f5f7; */
+	background-color: lightgray;
 }
 
+.box-container {
+	width: 98%;
+	margin: auto;
+	justify-content: center;
+}
+
+.full-box, .half-box {
+	background-color: white;
+	box-sizing: border-box;
+	border-radius: 18px;
+}
+
+
+
+.tile-header{
+	padding: 30px 35px 0px;
+	padding-top: 36px;
+	font-size: 19px;
+}
+
+.tile-headtext{
+	margin: 5.1px 0px 0px;
+	font-size: 17px;
+	margin-top: 0.3em;
+	letter-spacing: 0em;
+	line-height: 1.5882352941;
+	max-width: 655px;
+}
+
+.tile-body {
+    box-sizing: border-box;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
+
+.half-box {
+	max-width: 655px;
+	height: auto;
+	flex-direction: column;
+	padding-top: 30px;
+	border-radius: 30px;
+	margin: 10px;
+}
+.full-box{
+	margin: 10px;
+	width: auto;
+}
+.halfbox-container {
+	display: flex;
+	width: 98%;
+	margin: auto;
+	justify-content: center;
+}
