--- a/02. working/layout/boxlayout.html
+++ b/02. working/layout/boxlayout.html
@@ -13,8 +13,7 @@
 
     <div class="container">
 
-        hello
-
+    <!-- 한개짜리 박스 -->
         <div class="box-container">
             <div class="full-box">
                 <div class="tile-header">
@@ -32,7 +31,9 @@
                 </div>
             </div>
         </div>
+    <!-- -----------------------1111111111----------- -->
 
+    <!-- 두개짜리 박스 -->
         <div class="halfbox-container">
             <div class="half-box">
                 <div class="tile-header">
@@ -66,6 +67,80 @@
                 </div>
             </div>
         </div>
+        <!-- ----------------------22222222------------- -->
+        <!-- 두개짜리 박스 -->
+        <div class="halfbox-container">
+            <div class="half-box w-2">
+                <div class="tile-header">
+                    <div class="tile-headline">가나다라</div>
+                    <div class="tile-headtext"><p>‘집중 모드’는 집중이 필요한 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다. 원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도, 방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나, 자신만의 집중 모드를 직접 만들 수도 있답니다.</p></div>
+                </div>
+
+                <div class="tile-body">
+                    <p>
+                        이미지가 들어갈만한 곳. 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다.
+                        원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도,
+                        방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+                        자신만의 집중 모드를 직접 만들 수도 있답니다.
+                    </p>
+                </div>
+            </div>
+
+            <div class="half-box w-1">
+                <div class="tile-header">
+                    <div class="tile-headline">가나다라</div>
+                    <div class="tile-headtext"><p>‘집중 모드’는 집중이 필요한 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다. 원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도, 방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나, 자신만의 집중 모드를 직접 만들 수도 있답니다.</p></div>
+                </div>
+
+                <div class="tile-body">
+                    <p>
+                        이미지가 들어갈만한 곳. 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다.
+                        원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도,
+                        방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+                        자신만의 집중 모드를 직접 만들 수도 있답니다.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- ----------------------22222222------------- -->
+        <!-- 한개짜리 박스 -->
+        <div class="box-container">
+            <div class="full-box">
+                <div class="tile-header">
+                    <div class="tile-headline">가나다라</div>
+                    <div class="tile-headtext"><p>‘집중 모드’는 집중이 필요한 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다. 원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도, 방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나, 자신만의 집중 모드를 직접 만들 수도 있답니다.</p></div>
+                </div>
+
+                <div class="tile-body">
+                    <p>
+                        이미지가 들어갈만한 곳. 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다.
+                        원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도,
+                        방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+                        자신만의 집중 모드를 직접 만들 수도 있답니다.
+                    </p>
+                </div>
+            </div>
+        </div>
+    <!-- -----------------------1111111111----------- -->
+    <!-- 한개짜리 박스 -->
+    <div class="box-container">
+        <div class="full-box">
+            <div class="tile-header">
+                <div class="tile-headline">가나다라</div>
+                <div class="tile-headtext"><p>‘집중 모드’는 집중이 필요한 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다. 원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도, 방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나, 자신만의 집중 모드를 직접 만들 수도 있답니다.</p></div>
+            </div>
+
+            <div class="tile-body">
+                <p>
+                    이미지가 들어갈만한 곳. 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다.
+                    원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도,
+                    방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+                    자신만의 집중 모드를 직접 만들 수도 있답니다.
+                </p>
+            </div>
+        </div>
+    </div>
+<!-- -----------------------1111111111----------- -->
 
     </div>
 
