--- a/02.working/layout/boxlayout.css
+++ b/02.working/layout/boxlayout.css
@@ -8,13 +8,13 @@ body {
 	/* background-color: #f5f5f7; */
 	background-color: lightgray;
 }
-
+/*  */
 .box-container {
 	width: 98%;
 	margin: auto;
 	justify-content: center;
 }
-
+/*  */
 .full-box, .half-box {
 	background-color: white;
 	box-sizing: border-box;
@@ -22,13 +22,13 @@ body {
 }
 
 
-
+/*  */
 .tile-header{
 	padding: 30px 35px 0px;
 	padding-top: 36px;
 	font-size: 19px;
 }
-
+/*  */
 .tile-headtext{
 	margin: 5.1px 0px 0px;
 	font-size: 17px;
@@ -37,7 +37,7 @@ body {
 	line-height: 1.5882352941;
 	max-width: 655px;
 }
-
+/*  */
 .tile-body {
     box-sizing: border-box;
     justify-content: center;
