--- a/01.project/css/default.css
+++ b/01.project/css/default.css
@@ -68,6 +68,10 @@ a{
 }
 
 /* @@@@@@@@@@ 네비게이션 바 @@@@@@@@@@ */
+.nav-content {
+	margin: 0 35.5px;
+	padding: 0 22px;
+}
 .global-nav {
 	height: 50px;
 }
@@ -76,7 +80,6 @@ a{
 	border-bottom: 2px solid lightgray;
 	z-index: 9999;
 }
-
 .local-nav-sticky .local-nav {
 	position: sticky;
 	top: 0;
@@ -85,17 +88,16 @@ a{
 	backdrop-filter: saturate(180%) blur(15px);
 	transition: all;
 	transition-duration: 2s;
-
-	
 }
 
 .global-nav-links, .local-nav-links {
 	display: flex;
 	align-items: center;
 	max-width: 1000px;
-	height: 100%;
+	height: 50px;
 	margin: 0 auto;
 }
+
 .global-nav-links .logo {
 	/* 첫번째만 왼쪽으로 붙도록 */
 	margin-right: auto;
