--- a/01.project/css/login.css
+++ b/01.project/css/login.css
@@ -17,5 +17,100 @@ h1{
 .signin-logo {
   width: 200px;
   height: 200px;
-  margin-top: 100px;
+  margin-top: 50px;
+}
+.signin-header > p {
+  margin: 15px;
+}
+
+.form-box {
+  max-width: 328px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.form-textbox {
+  font-size: 17px;
+  line-height: 1.29412;
+  font-weight: 400;
+  letter-spacing: -.021em;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  display: inline-block;
+  box-sizing: border-box;
+  vertical-align: top;
+  width: 100%;
+  height: 40px;
+  margin-bottom: -0.1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #333;
+  text-align: left;
+  border: 1px solid #d6d6d6;
+  border-radius: 6px;
+  background: #fff;
+  background-clip: padding-box;
+}
+.id-password-input{
+  margin: 0;
+  position: relative;
+}
+
+#id-text-field{
+  height: 2.6em;
+  border-top: 0;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;  
+  border: 1px solid #d6d6d6;
+}
+
+#password-text-field{
+  height: 2.6em;
+  border-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;  
+  border: 1px solid #d6d6d6;
+}
+
+.remember-account {
+  margin: 18px 0 16px;
+}
+#remember-me {
+  cursor: pointer;
+  margin: 0;
+}
+#remember-me-label{
+  padding-left: 11px;
+  margin-top: 15px;
+  margin-bottom: 0;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.forgot {
+  border-top: 1px solid #d6d6d6;
+  padding: 20px;
+  
+}
+
+.forgot a{
+  color: #0070c9;
+  text-decoration: none;
+}
+
+.blank {
+  height: 15rem;
+}
+
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 7rem;
+  color: white;
+  background-color: lightgray;
 }
