--- a/01.project/css/default.css
+++ b/01.project/css/default.css
@@ -12,7 +12,8 @@ body {
 	color: rgb(29, 29, 31);
     /* 자간 줄이기 */
 	letter-spacing: -0.05em;
-    background-color: #f5f5f7;;
+  background-color: #f5f5f7;;
+	font-size: 17px;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -63,8 +64,8 @@ div{
 }
 a{
 	color: rgb(29, 29, 31);
-	/* 링크가 거렸는지 확인후 활성화하기 */
-	/* text-decoration: none; */
+	/* 링크가 걸렸는지 확인후 활성화하기 */
+	text-decoration: none;
 }
 
 /* @@@@@@@@@@ 네비게이션 바 @@@@@@@@@@ */
