--- a/01.project/css/signup.css
+++ b/01.project/css/signup.css
@@ -1,14 +1,27 @@
+
 h1 {
-  font-size: 34px;
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
 .app-container{
   height: 100%;
   text-align: center;
 }
-
-
-
-
 
 .input-section {
   max-width: 1200px;
@@ -16,6 +29,8 @@ h1 {
   width: 80%;
   border-bottom: 1px solid #e7e7e8;
   padding: 30px 0 20px;
+  color: #666;
+
   
 }
 
@@ -24,26 +39,73 @@ h1 {
   margin: auto;
 }
 
-
-
 .form-textbox {
   font-size: 17px;
-  line-height: 1.29412;
+  line-height: 1.23543;
   font-weight: 400;
-  letter-spacing: -.021em;
+  letter-spacing: -.022em;
   font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
   display: inline-block;
   box-sizing: border-box;
   vertical-align: top;
   width: 100%;
-  height: 40px;
-  margin-bottom: -0.1px;
-  padding-left: 15px;
-  padding-right: 15px;
+  height: 3.3em;
+  margin-bottom: 14px;
+  padding-top: 18px;
+  padding-left: 16px;
+  padding-right: 16px;
   color: #333;
   text-align: left;
   border: 1px solid #d6d6d6;
-  border-radius: 6px;
-  background: #fff;
+  border-radius: 4px;
+  background: hsla(0,0%,100%,.8);
   background-clip: padding-box;
 }
+
+.signip-description-two a{
+  color: #0070c9;
+  text-decoration: none;
+}
+
+.country-select h3, .input-address h3 {
+  margin-bottom: 0;
+  text-align: left;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.input-id h3 {
+  margin-bottom: 14px;
+  margin-top: 0;
+  text-align: left;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.input-id-field {
+  margin-bottom: 0;
+}
+
+.button {
+  font-size: 17px;
+  line-height: 1.47059;
+  letter-spacing: -.022em;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  background-color: #0070c9;
+  background: linear-gradient(#42a1ec,#0070c9);
+  border: 1px solid #07c;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  min-width: 30px;
+  padding: 4px 15px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.btn-box {
+  margin: 20px 0 20px 0;
+}
+
+
