--- a/01.project/css/nav.css
+++ b/01.project/css/nav.css
@@ -1,4 +1,9 @@
+
 /* @@@@@@@@@@ 네비게이션 바 @@@@@@@@@@ */
+.nav-content {
+	margin: 0 35.5px;
+	padding: 0 22px;
+}
 .global-nav {
 	height: 50px;
 }
@@ -7,7 +12,6 @@
 	border-bottom: 2px solid lightgray;
 	z-index: 9999;
 }
-
 .local-nav-sticky .local-nav {
 	position: sticky;
 	top: 0;
@@ -21,9 +25,10 @@
 	display: flex;
 	align-items: center;
 	max-width: 1000px;
-	height: 100%;
+	height: 50px;
 	margin: 0 auto;
 }
+
 .global-nav-links .logo {
 	/* 첫번째만 왼쪽으로 붙도록 */
 	margin-right: auto;
@@ -35,8 +40,12 @@
 }
 
 .local-nav-links a {
-	font-size: 0.9rem;
+	font-size: 1.1rem;
+	-webkit-text-stroke: 1px black;
+	color: white;
+	font-weight: 800;
 }
 .global-nav-links a:not(.logo){
 	margin-left: 3em;
+
 }
