--- a/01.project/css/contact.css
+++ b/01.project/css/contact.css
@@ -20,7 +20,7 @@
 }
 
 .info-section {
-  background-color: orange;
+  /* background-color: orange; */
   width: 50%;
   text-align: left;
 }
@@ -30,11 +30,57 @@
 .info-section .info-desc {
   margin: 50px 0 50px 0;
 }
+.info-icon .contact-icon-box {
+  display: inline-block;
+}
 .info-section .info-icon i {
   margin: 30px 20px 50px 20px;
 }
 
 .input-section {
-  background-color: green;
+  /* background-color: green; */
   width: 50%;
+  font-size: 18px;
+}
+.input-section .contact-form-floating {
+  color: gray;
+  margin: 30px 0 20px 0;
+}
+.input-section .contact-form-floating:first-child {
+  margin-top: 50px;
+}
+
+
+.contact-textarea-section textarea {
+  display: block;
+  width: 100%;
+  height: 200px;
+  padding: 15px;
+  box-sizing: border-box;
+  border: 0;
+  resize: vertical;
+  margin-bottom: 10px;
+}
+
+
+.button {
+  font-size: 17px;
+  line-height: 1.47059;
+  letter-spacing: -.022em;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  background-color: #0070c9;
+  background: linear-gradient(#42a1ec,#0070c9);
+  border: 1px solid #07c;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  min-width: 30px;
+  padding: 4px 15px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.btn-box {
+  margin: 20px 0 20px 0;
 }
