--- a/01.project/css/signup.css
+++ b/01.project/css/signup.css
@@ -92,7 +92,10 @@ h3 {
   margin-bottom: 0;
 }
 .form-floating > div > h3 {
-  margin-left: 2px;
+  margin: 2px 2px 10px 2px
+}
+.valid-check {
+  margin: -14px 0 20px;  
 }
 
 .button {
