--- a/01.project/css/login.css
+++ b/01.project/css/login.css
@@ -84,25 +84,30 @@ h1{
 }
 #remember-me-label{
   padding-left: 11px;
-  margin-top: 15px;
   margin-bottom: 0;
   cursor: pointer;
   font-size: 17px;
 }
+.submit-section {
+  display: flex;
+  align-items: center;
+  justify-content:center;
+}
+
 
 .forgot {
   border-top: 1px solid #d6d6d6;
-  padding: 20px;
-  
+  padding: 20px;  
 }
-
+.forgot > span {
+  margin-right: 20px;
+}
 .forgot a{
   color: #0070c9;
   text-decoration: none;
 }
-
 .blank {
-  height: 15rem;
+  height: 5rem;
 }
 
 
@@ -114,4 +119,28 @@ h1{
   color: white;
   background-color: lightgray;
 }
+
+
+.button {
+  font-size: 17px;
+  line-height: 1.47059;
+  letter-spacing: -.022em;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  background-color: #0070c9;
+  background: linear-gradient(#42a1ec,#0070c9);
+  border: 1px solid #07c;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  min-width: 30px;
+  padding: 4px 15px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.btn-box {
+  margin: 20px 0 20px 40px;
+}
+
 
