--- a/01.project/css/main.css
+++ b/01.project/css/main.css
@@ -1,6 +1,6 @@
 /*   pallet
 --background: #f5f5f7
---text: 1d1d1f
+--text: #1d1d1f
 --violet: #8876fe;
 --magenta: #d71bce;
 --plum: #8d1287;
@@ -36,10 +36,11 @@ html {
 .scroll-section {
     /* 섹션마다 화면나오게 설정 */
     /* padding-top: 50vh; */
+    margin: 0 0 83px;
 }
 .main-view {
     position: relative;
-    height: 2700px;
+    height: 2500px;
     /* background-color: orange; */
 }
 .main-title h1{
@@ -73,25 +74,42 @@ html {
     top: 50px;
 }
 
-.main-message{
-    display: flex;
-	align-items: center;
-	justify-content: center;
-	top: 35vh;
-	margin: 5px 0;
-	height: 3em;
-	font-size: 2.5rem;
-    background-color: lightgray;
-}
 
-.main-message p {
-    line-height: 1.2;
-    font-weight: bold;
-    text-align: center;
-}
 
 
 /* 스크롤 관련 11111111111111 */
+.section-one-header {
+    background-color: white;
+    padding: 38px 30px 100px;
+}
+.section-one-header h1 {
+    text-align: center;
+    font-size: 72px;
+    margin: 50px 0;
+}
+.section-one-header p {
+    margin: 64px 0;
+    text-align: center;
+    font-size: 36px;
+    color: gray;
+}
+
+.section-one-desc-section {
+    padding: 135px 35px 50px 35px;
+}
+.section-one-desc-section h2{
+    font-size: 64px;
+    margin: 0 0 18px;
+}
+.section-one-description {
+    max-width: 70%;
+    letter-spacing: .011em;
+    line-height: 1.5;
+    font-size: 21px;
+    font-weight: 600;
+
+}
+
 .description {
     padding: 0 1rem;
     max-width: 1000px;
@@ -112,12 +130,28 @@ html {
 #scroll-section-2 .main-message {
     font-size: 3.5rem;
 }
-.main-message small{
-    display: block;
-    margin-bottom: 0.5em;
-    font-size: 1.2rem;
-    
+.board-info-header {
+    padding: 0 35px;
+    margin-bottom: 24px;
+    font-size: 40px;
+    font-weight: 600;
+    color: #f63e54;
 }
+.board-info-tile-text {
+    margin: 0.5em 0 0 ;
+    line-height: 1.6;
+    font-size: 17px;
+    font-weight: 600;
+}
+.board-info-section h4 {
+    font-size: 19px;
+    font-weight: 600;
+    color: #f63e54;
+}
+img{
+    width: 100%;
+}
+
 /* 설명할때 붙이기 */
 .dese-message {
     width: 50%;
@@ -125,26 +159,140 @@ html {
 }
 
 /* 스크롤 관련 33333333333333 */
-.mid-message {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 1rem;
-    font-size: 2rem;
-    color: rgba(128, 128, 128, 0.466);
+
+#scroll-section-3 .main-message {
+    font-size: 3.5rem;
 }
-.mid-message strong {
-    color: black;
+.store-info-header {
+    padding: 0 35px;
+    margin-bottom: 24px;
+    font-size: 40px;
+    font-weight: 600;
+    color: #027fff;
+}
+.store-info-tile-text {
+    margin: 0.5em 0 0 ;
+    line-height: 1.6;
+    font-size: 17px;
+    font-weight: 600;
+}
+.store-info-section h4 {
+    font-size: 19px;
+    font-weight: 600;
+    color: #027fff;
+}
+.store-info-image img{
+    /* background-image: url(../img/sample/cardsample.jpeg); */
+    width: 100%;
+}
+/* 스크롤 관련 44444444444444 */
+
+#scroll-section-4 .main-message {
+    font-size: 3.5rem;
 }
 
-.canvas-caption {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 1rem;
-    font-size: 1.2rem;
-    color: gray;
-    text-align: center;
+.section-four-desc-section {
+    padding: 35px 50px;
+}
+.section-four-desc-section h2{
+    font-size: 64px;
+    margin: 0 0 18px;
+}
+.section-four-description {
+    max-width: 70%;
+    letter-spacing: .011em;
+    line-height: 1.5;
+    font-size: 21px;
+    font-weight: 600;
 }
 
+.club-info-header {
+    padding: 0 35px;
+    margin-bottom: 24px;
+    font-size: 40px;
+    font-weight: 600;
+    color: #049cb7;
+}
+.club-info-tile-text {
+    margin: 0.5em 0 0 ;
+    line-height: 1.6;
+    font-size: 17px;
+    font-weight: 600;
+}
+.club-info-section h4 {
+    font-size: 19px;
+    font-weight: 600;
+    color: #049cb7;
+}
+.club-info-text {
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 1.1;
+}
+.club-imagebox {
+    /* background-image: url(../img/sample/cardsample.jpeg); */
+    width: 100%;
+}
+.club-imagebox img {
+    width: 100%;
+}
+#pingpong-img {
+    width: 70%;
+}
+
+
+/* 스크롤 관련 55555555555555 */
+
+#scroll-section-5 .main-message {
+    font-size: 3.5rem;
+}
+
+.section-five-desc-section {
+    padding: 35px 50px;
+}
+.section-five-desc-section h2{
+    font-size: 64px;
+    margin: 0 0 18px;
+}
+.section-five-description {
+    max-width: 70%;
+    letter-spacing: .011em;
+    line-height: 1.5;
+    font-size: 21px;
+    font-weight: 600;
+}
+
+.community-info-header {
+    padding: 0 35px;
+    margin-bottom: 24px;
+    font-size: 40px;
+    font-weight: 600;
+    color: #0c9d46;
+    ;
+}
+.community-info-tile-text {
+    margin: 0.5em 0 0 ;
+    line-height: 1.6;
+    font-size: 17px;
+    font-weight: 600;
+}
+.community-info-section h4 {
+    font-size: 19px;
+    font-weight: 600;
+    color: #0c9d46;
+}
+.community-info-text {
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 1.1;
+}
+.community-imagebox {
+    /* background-image: url(../img/sample/cardsample.jpeg); */
+    width: 100%;
+}
+.community-imagebox img {
+    width: 100%;
+}
 
 
 /* 카드 애니매이션 관련 */
@@ -182,7 +330,7 @@ html {
 
 
 /* @@@@@@@@@@@@@@@@@ media 쿼리 @@@@@@@@@@@@@@@@@ */
-@media (min-width: 1024px) {
+@media (min-width: 1000px) {
     #scroll-section-0 h1 {
         font-size: 9vw;
     }
@@ -223,6 +371,7 @@ html {
 	background-color: white;
 	box-sizing: border-box;
 	border-radius: 18px;
+    margin: 20px;
 }
 
 
@@ -238,13 +387,16 @@ html {
 	font-size: 17px;
 	margin-top: 0.3em;
 	letter-spacing: 0em;
-	line-height: 1.5882352941;
+	line-height: 1.6;
 	max-width: 655px;
 }
 /*  */
 .tile-body {
     box-sizing: border-box;
+    padding: 42px 35px 0;
     justify-content: center;
+    font-weight: 600;
+    line-height: 1.7;
     height: 100%;
     width: 100%;
 }
@@ -252,9 +404,11 @@ html {
 
 .half-box {
 	max-width: 655px;
+    min-width: 200px;
+    width: 50%;
 	height: auto;
 	flex-direction: column;
-	padding-top: 30px;
+	/* padding-top: 30px; */
 	border-radius: 30px;
 	margin: 10px;
 }
@@ -264,7 +418,39 @@ html {
 }
 .halfbox-container {
 	display: flex;
-	width: 98%;
+	width: 100%;
 	margin: auto;
 	justify-content: center;
+}
+
+.halfbox-container .half-box .font-black h4{
+    color: #1d1d1f;
+}
+
+.club-tile {
+    padding-top: 10px;
+}
+
+
+
+/* 안쓰는 기능들 */
+
+.mid-message {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 2rem;
+    color: rgba(128, 128, 128, 0.466);
+}
+.mid-message strong {
+    color: black;
+}
+
+.canvas-caption {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    color: gray;
+    text-align: center;
 }
