--- a/01.project/css/board.css
+++ b/01.project/css/board.css
@@ -116,7 +116,7 @@ ul, li {
 .board-list > div > div {
   display: inline-block;
   padding: 15px 0;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   text-align: center;
 }
 
@@ -131,10 +131,12 @@ ul, li {
 }
 .board-list .date {
   width: 10%;
+  font-size: 15px;
 }
 .board-list .count {
   width: 10%;
 }
+
 
 /* 페이지 제어 버튼 관련 */
 .board-page {
